# exemplo20232

./: pyproject.toml
src/blog/: admin.py  models.py  serializers.py  urls.py  views.py  viewsets.py
src/blog/migrations/: 0001_initial.py
src/hello/: settings.py  urls.py
